--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/graphql": "^7.9.1",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.19.0",
+    "class-validator": "^0.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
